--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>bootstrap</artifactId>
             <version>3.3.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
         <!-- end of webjars -->
     </dependencies>
     <build>
